explanation on using sample, clean up CSS

--- a/app/css/color-swatcher.css
+++ b/app/css/color-swatcher.css
@@ -1,16 +1,13 @@
-.colorswatcher-library {
-
-}
 .colorswatcher-library-title {
     font-size: 30px;
-}
-.colorswatch {
 }
 .colorswatch-name {
     font-size: 1.4em;
 }
-.colorswatch-code-key {
-}
 .colorswatch-code-value {
     font-family: monospace;
+}
+.white-text {
+    color:#FFFFFF;
+    text-decoration: none;
 }
